@@ -660,6 +660,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 1734) granting db permissions failed with db usernames containg '-'
 * (bug 3170) wikititlesuffix was removed, use pagetitle instead
 * (bug 3187) watchlist text refer to unexistent "Stop watching" action
+* (bug 3190) Added some date format choices for language sr
 
 === Caveats ===
 
